# chatty

./: Cargo.toml  README.md
src/: app.rs  logging.rs  main.rs  panic_handler.rs  ui.rs
src/backends/: mac.rs  mock.rs  mod.rs
src/state/: action.rs  mod.rs  state.rs  store.rs
src/state/backends/: mac.rs  mock.rs  mod.rs
src/ui/: manager.rs  mod.rs  router.rs
src/ui/components/: component.rs  input_box.rs  mod.rs
src/ui/panes/: conversations_pane.rs  input_pane.rs  messages_pane.rs  mod.rs
src/ui/panes/conversations/: conversations_pane.rs  mod.rs
src/ui/panes/dev_console/: dev_console.rs  mod.rs
src/ui/panes/messages/: message.rs  messages_pane.rs  mod.rs
