[package]
name = "chatty"
version = "0.1.0"
edition = "2021"

authors = ["justindeu"]
homepage = "https://github.com/justinDeu/chatty"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
color-eyre = "0.6.3"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = {version="0.28.1", features=["event-stream"]}
directories = "5.0.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
ratatui = "0.27.0"
shlex = "1.3.0"
tokio = {version="1.39.2", features =["full"]}
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
human-panic = "2.0.1"
libc = "0.2.158"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.0"

